Add and remove items

--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
           <h1>Todo list</h1>
           <img src="/images/todo-image.jpg" alt="My test image" width=300>
           <p>This is going to be a list with </p>
-          <ul>
+          <input type="text" id="myInput" placeholder="Add something to the list">
+          <span onclick="newElement()" class="addBtn">Add</span>
+          <ul id="myUL" class='main-list'>
               <li>item1</li>
               <li>item2</li>
               <li>item3</li>
           </ul>
-          <form action="/action_page.php">
+          <!-- <form action="/action_page.php">
             <label for="nitem">New Item</label><br>
             <input type="text" id="fNewItem" name="fNewItem" ><br>
             <input type="submit" value="Submit">
-          </form>
-          <a href="https://www.wikihow.com/Organize-Your-Time">Some ideas to get organized</a>
-          <p>To finish soon </p>
+          </form> -->
+          <!-- <a href="https://www.wikihow.com/Organize-Your-Time">Some ideas to get organized</a> -->
+          <!-- <button>Change user</button> -->
         </div>
       </main>
       <footer>  
